v8/tests/messages/non-ident-label.out
non-ident-label.js:1: Uncaught SyntaxError: Unexpected token :
0:
 ^
